--- a/styles/WorkCallout.module.css
+++ b/styles/WorkCallout.module.css
@@ -43,8 +43,8 @@
 
 .CalloutContent h2 {
     color: var(--primary-color) !important;
-    font-size: calc(6rem*var(--scale));
-    font-weight: var(--fontWeightMedium)!important;
+    font-size: calc(6rem * var(--scale));
+    font-weight: var(--fontWeightMedium) !important;
     line-height: 1;
     letter-spacing: -1px;
     margin-bottom: 24px;
@@ -56,9 +56,9 @@
 }
 
 .Callout .specialLink {
-    color: var(--green);
-    font-weight: var(--fontWeightMedium)!important;
-    font-size: calc(6rem*var(--scale));
+    color: var(--blue2);
+    font-weight: var(--fontWeightMedium) !important;
+    font-size: calc(6rem * var(--scale));
     font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     line-height: 1.1;
     display: -webkit-inline-box;
@@ -117,7 +117,7 @@
 }
 
 .Callout .linkHasUnderline {
-    border-bottom: 2px solid var(--LinkUnderlineGreen);
+    border-bottom: 2px solid var(--LinkUnderlineBlue);
 }
 
 @media only screen and (max-width: 650px) {
