--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -1,9 +1,9 @@
 .HeroContact {
     position: relative;
-    height: 24rem;
+    padding: 250px 0 110px;
     background-size: cover;
-    background-color: #080F1E;
-    text-align: center;
+    background-color: #080f1e;
+    overflow: hidden;
 }
 
 .HeroContact .bannerBg {
@@ -17,11 +17,15 @@
     background-position: 50%;
     -webkit-animation: fadeIn 1.2s;
     animation: fadeIn 1.2s;
-    -webkit-animation-timing-function: cubic-bezier(.25, .46, .45, .94);
-    animation-timing-function: cubic-bezier(.25, .46, .45, .94);
+    -webkit-animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .ContactContainer {
+    z-index: 2;
+}
+
+.container {
     clear: both;
     margin: 0 auto;
     max-width: 86%;
@@ -29,12 +33,158 @@
     position: relative;
 }
 
+.HeroContact h1 {
+    color: #5972f3;
+    margin-bottom: 10px;
+    text-transform: lowercase;
+    font-size: calc(95rem / 16);
+    font-weight: var(--fontWeightMedium);
+    margin: 0;
+    letter-spacing: -0.45px;
+    line-height: calc(95 / 72);
+}
+
+
+/*------------------------------------*\
+    # block.WaysToConnect
+\*------------------------------------*/
+
+.WaysToConnect {}
+
+
+/*------------------------------------*\
+    # block.companyinfo
+\*------------------------------------*/
+
+.CompanyInfoWrapper {
+    padding: 15vh 0 5vh 0;
+}
+
+.CompanyInfoWrapper .header .heading3 {
+    color: #080f1e;
+    font-size: calc(32rem / 16);
+    font-weight: var(--fontWeightMedium);
+    letter-spacing: -0.3px;
+    line-height: calc(40 / 32);
+    margin-bottom: 10vh;
+}
+
+.CompanyInfo .card {
+    padding-bottom: 10vh;
+    color: #080f1e;
+}
+
+.CompanyInfo .card p {
+    color: #5972f3;
+    font-size: calc(20rem / 16);
+    font-weight: var(--medium);
+    letter-spacing: -0.6px;
+    line-height: 1;
+    margin-bottom: 2.5vh;
+    text-transform: none;
+}
+
+.CompanyInfo .card .list {
+    font-size: calc(13.61905px + 0.11905vw);
+    line-height: calc(19.2381px + 0.2381vw);
+    letter-spacing: none;
+}
+
+@media only screen and (min-width: 544px) {
+    .CompanyInfo .information {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .CompanyInfo .information .card {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: calc(49.95% - 20px);
+        max-width: calc(49.95% - 20px);
+        width: calc(49.95% - 20px);
+    }
+    .CompanyInfo .information .card:nth-child(1n) {
+        margin-right: 40px;
+        margin-left: 0;
+    }
+    .CompanyInfo .information .card:nth-child(2n) {
+        margin-right: 0;
+        margin-left: auto;
+    }
+    .CompanyInfo .information .card:last-child {
+        margin-right: 0;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .CompanyInfo .information .card {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: calc(33.3% - 26.66667px);
+        max-width: calc(33.3% - 26.66667px);
+        width: calc(33.3% - 26.66667px);
+    }
+    .CompanyInfo .information .card:nth-child(1n) {
+        margin-right: 40px;
+        margin-left: 0;
+    }
+    .CompanyInfo .information .card:nth-child(3n) {
+        margin-right: 0;
+        margin-left: auto;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .CompanyInfo .information {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: calc(99.9% * 8 / 12 - (40px - 40px * 8 / 12));
+        max-width: calc(99.9% * 8 / 12 - (40px - 40px * 8 / 12));
+        width: calc(99.9% * 8 / 12 - (40px - 40px * 8 / 12));
+    }
+    .CompanyInfo .information:nth-child(1n) {
+        margin-right: 40px;
+        margin-left: 0;
+    }
+    .CompanyInfo .information:last-child {
+        margin-right: 0;
+    }
+}
+
+
+/*768px*/
+
+@media only screen and (max-width: 768px) {
+    .CompanyInfoWrapper .header .heading3 {
+        margin-bottom: 5vh;
+    }
+    .CompanyInfo .card {
+        padding-bottom: 5vh;
+    }
+}
+
+
+/*------------------------------------*\
+    # block.companyinfo END
+\*------------------------------------*/
+
 
 /*1100px*/
 
 @media only screen and (max-width: 1100px) {
-    .ContactContainer {
+    .container {
         max-width: 100% !important;
+    }
+    .HeroContact {
+        padding: 120px 0 80px;
+    }
+    .HeroContact h1 {
+        font-size: calc(40rem / 16);
+        margin-bottom: 40px;
+    }
+    .CompanyInfoWrapper .header .heading3 {
+        font-size: calc(26rem / 16);
+        line-height: calc(38 / 26);
+        margin-bottom: 5vh;
     }
 }
 
@@ -42,9 +192,10 @@
 /*650px*/
 
 @media only screen and (max-width: 650px) {
-    .ContactContainer {
+    .container {
         padding: 0 20px;
     }
+    .CompanyInfo .information {}
 }
 
 .curve {
@@ -55,8 +206,8 @@
     margin-left: -40%;
     border-radius: 50%;
     box-shadow: 0 100px 0 #fff;
-    -webkit-animation-timing-function: cubic-bezier(.39, .575, .565, 1);
-    animation-timing-function: cubic-bezier(.39, .575, .565, 1);
+    -webkit-animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+    animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 
@@ -65,8 +216,8 @@
 @media (min-width: 1201px) {
     .curve {
         height: 1000px;
-        -webkit-animation: curve-load-animation-xl .8s;
-        animation: curve-load-animation-xl .8s;
+        -webkit-animation: curve-load-animation-xl 0.8s;
+        animation: curve-load-animation-xl 0.8s;
     }
 }
 
@@ -74,13 +225,10 @@
 /*769px - 1200px*/
 
 @media (min-width: 769px) and (max-width: 1200px) {
-    .HeroContact {
-        height: 23rem;
-    }
     .curve {
         height: 700px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
     }
 }
 
@@ -88,13 +236,10 @@
 /*545px - 768px*/
 
 @media (min-width: 545px) and (max-width: 768px) {
-    .HeroContact {
-        height: 22rem;
-    }
     .curve {
         height: 500px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
     }
 }
 
@@ -102,12 +247,9 @@
 /*544px*/
 
 @media only screen and (max-width: 544px) {
-    .HeroContact {
-        height: 21rem;
-    }
     .curve {
         height: 400px;
-        -webkit-animation: curve-load-animation-lg .8s;
-        animation: curve-load-animation-lg .8s;
+        -webkit-animation: curve-load-animation-lg 0.8s;
+        animation: curve-load-animation-lg 0.8s;
     }
 }
