--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
     --green: #4affd8;
     --accent: #ec4f70;
     --blue: #4461fb;
+    --blue2: #5972f3;
     --grey: #eaeaea;
     --milky-way: #f8f8fb;
     --yellow: #fddb60;
@@ -14,6 +15,7 @@
     --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --color-white-400: #99a0aa;
     --color-turquoise-400: #4affd8;
+    --color-blue-400: #5972f3;
     --heading-one: 60px;
     --heading-two: 48px;
     --heading-three: 32px;
@@ -31,6 +33,7 @@
     --fontWeightExtraBold: 800;
     --LinkUnderline: var(--color-white-400);
     --LinkUnderlineGreen: var(--color-turquoise-400);
+    --LinkUnderlineBlue: var(--color-blue-400);
     --rowGapNormal: 8px;
     --rowGapMedium: 24px;
     --scale: 1;
